# DSA-Labyrinth

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DsaTracker.sln  LICENSE  README.md  roadmap.md
.github/workflows/: ci.yml  generate-metadata.yml
languages/cpp/: .gitignore
languages/cpp/data_structures/stack/: stack_list.cpp  stack_list.h
languages/cpp/tests/: main.cpp
languages/go/: .gitignore
languages/go/tests/: main_test.go
languages/java/: .gitignore  pom.xml
languages/js/: .gitignore  package-lock.json  package.json
languages/python/: .gitignore
languages/python/data_structures/stack/: README.md  stack_deque.py  stack_linkedlist.py  stack_list.py
languages/python/tests/: test_stack.py
metadata/: stack-python.md
metadata/cpp/: stack_list.json
metadata/csharp/: stack_list.json
metadata/python/: stack_deque.json  stack_linkedlist.json  stack_list.json
scripts/: generate_metadata.py
visualizations/: bfs-explained.md
